[package]
name = "lemonade-rocket"
description = "Rocket Load Balancer implementation"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
hyper = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]


[lints]
workspace = true
