[package]
name = "lemonade-tracing"
description = "Tracing utils all servers"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry"] }

[lints]
workspace = true
