[package]
name = "worker-axum"
description = "Axum worker implementation to test the load balancer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

lemonade-tracing = { workspace = true }
worker-shared = { workspace = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }

[lints]
workspace = true
