[package]
name = "worker-shared"
description = "Shared library for all the worker implementations"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dev-dependencies]
reqwest = { workspace = true }

[lints]
workspace = true
